module_sample/vpc/_module/vpc/vpc.tf
resource "aws_vpc" "default" {
  cidr_block                       = "10.${var.cidr_numeral}.0.0/16"
  # region = var.vpc_region

  tags = {
    Name = var.vpc_name
  }
}

resource "aws_internet_gateway" "default" {
  vpc_id = aws_vpc.default.id

  tags = {
    Name = var.vpc_name
  }
}

resource "aws_subnet" "public" {
  count  = length(var.availability_zones)
  vpc_id = aws_vpc.default.id

  cidr_block              = "10.${var.cidr_numeral}.${var.cidr_numeral_public[count.index]}.0/20"
  availability_zone       = element(var.availability_zones, count.index)

  tags = {
    Name = "public${count.index}-${var.vpc_name}"
  }

  lifecycle {
    ignore_changes = [tags]
  }
}

# PUBLIC SUBNETS - Default route
resource "aws_route_table" "public" {
  vpc_id = aws_vpc.default.id

  tags = {
    Name = "publicrt-${var.vpc_name}"
  }
}

resource "aws_route_table_association" "public" {
  count          = length(var.availability_zones)
  subnet_id      = element(aws_subnet.public.*.id, count.index)
  route_table_id = aws_route_table.public.id
}
